--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -1,6 +1,7 @@
 choose: Выберите одно из следующих
 error: ❗️ Произошла ошибка
 empty: Пусто
+textback: 🔙 Нажмите <b>◀️ Назад</b> чтобы вернуться
 login:
   username: ✍️ Введите свой <b>username</b>
   password: 🛡 Введите свой <b>пароль</b>
