--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -79,6 +79,7 @@ admin:
 
 user:
   desk: 
+    goal: "🎯 Запишите свою цель на сегодня:"
     number: 🔢 Введите номер парты
     amount: 🖥 Количество парт
     check: ❓ Вы действительно хотите забронировать эту парту?
@@ -91,3 +92,6 @@ user:
     name: "👨‍🎓 Имя и фамилия:"
     desk: "🖥 Номер парты:"
     expire: "⏳ До этого времени:"
+    goal: "🎯 Цель:"
+    dear: 👨‍🎓 Уважаемый
+    message: "⏳ Ваше время вышло. Пожалуйста, освободите место!"
